Topmost navbar made responsive to 600px screen size.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="main_container">
 
         <div class="navbar-container">
-            <div class="typinglogo-con">
-                <img src="./images/logo-large.svg" alt="logo">
-            </div>
+            
+                <div id="typing_logo"></div>
+            
 
             <div class="bestWPM-con">
                 <img id="champion" src="./images/icon-personal-best.svg" alt="Champion">
