Second navbar -containing details- made responsive.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
 
                     <div class="accuracy details">
                         <p class="details-text">Accuracy: </p>
-                        <p id="current-accuracy">0</p>
-                        <p id="current-accuracy-percent">%</p>
+                        <div id="accuracy-storer">
+                            <p id="current-accuracy">0</p>
+                            <p id="current-accuracy-percent">%</p>
+                        </div>
                     </div>
 
                     <div class="timer details">
