Site made responsive in text overflow.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="text-area-cont">
                     <div class="main-typing-box">
                         <p class="textDisplay"></p>
-                        <input type="text" id="typingInput" placeholder="Start typing here...">
+                        <textarea id="typingInput" placeholder="Start typing here..."></textarea>
                     </div>
                     <div class="reset-btn-cont">
                         <button class="resetButton">Restart Test
